--- a/play.html
+++ b/play.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Robot escape</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
         <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 
         <script type="importmap">
